--- a/Changelog
+++ b/Changelog
@@ -60,6 +60,9 @@ sox-12.17
   o Fixed clip24() range as pointed out by Ted Powell.
   o Fixed possible segfault in echos effect, as pointed out by Zinx
     Verituse.
+  o Moved most documentation to new "soxexam.1" manual page so that
+    all users on a unix system will have access to important information.
+    This means no more TIPS, CHEATS, or CHEATS.eft files.
 
 sox-12.16
 ---------
