Applying small cosmetic fixes.

--- a/sox.1
+++ b/sox.1
@@ -506,7 +506,7 @@ avg [ \fI-l\fR | \fI-r\fR ]
 Reduce the number of channels by averaging the samples,
 or duplicate channels to increase the number of channels.
 This effect is automatically used when the number of input
-samples differ from the number of output channels.  When reducing
+channels differ from the number of output channels.  When reducing
 the number of channels it is possible to manually specify the
 avg effect and use the \fI-l\fR and \fI-r\fR options to select only
 the left or right channel for the output instead of averaging the
