Cosmetic name change from ft->style to ft->encoding.

--- a/libst.3
+++ b/libst.3
@@ -70,7 +70,7 @@ a format structure, and a private structure.
 .P
 The format structure contains a list of control parameters for
 the sample: sampling rate, data size (bytes, words, floats, etc.),
-style (unsigned, signed, logarithmic), number of sound channels.
+encoding (unsigned, signed, logarithmic), number of sound channels.
 It also contains other state information: whether the sample file
 needs to be byte-swapped, whether fseek() will work, its suffix,
 its file stream pointer, its 
