--- a/ChangeLog
+++ b/ChangeLog
@@ -4,22 +4,34 @@ Change History
 This file contains a list of all changes starting after the release of
 sox-11gamma, followed by a list of prior authors and features.
 
+
+
 sox-x.x.x	xxxx-xx-xx
 ---------
 
 File formats:
 
-o Fix regression where MP3 handler required libmad headers to be installed.
-  (Samuli Suominen) 
+  o Fix regression where MP3 handler required libmad headers to be installed.
+    (Samuli Suominen) 
 
 Audio device drivers:
 
-o Fix immediate segfault on OSX while attempting to record.  May also
-  prevent segfaults on playing that some people reported.  (Adam Fritzler)
+  o Fix immediate segfault on OSX while attempting to record.  May also
+    prevent segfaults on playing that some people reported.  (Adam Fritzler)
+
+Effects:
+
+  o F.R. [3051700] spectrogram -r for `raw' spectrogram, no legend.  (robs)
+
+Other new features:
+
+  o Soxi now reports duration of AMR files.  (robs)
 
 Internal improvements:
 
   o Distribute msvc9 project files that had been in CVS only. (cbagwell)
+
+
 
 sox-14.3.1	2010-04-11
 ----------
