--- a/sox.1
+++ b/sox.1
@@ -3241,6 +3241,8 @@ default has a dark background).
 .IP \fB\-a\fR
 Suppress the display of the axis lines.  This is sometimes useful in
 helping to discern artefacts at the spectrogram edges.
+.IP \fB\-r\fR
+Raw spectrogram: suppress the display of axes and legends.
 .IP \fB\-A\fR
 Selects an alternative, fixed colour-set.  This is provided only for
 compatibility with spectrograms produced by another package.  It should
