--- a/ChangeLog
+++ b/ChangeLog
@@ -30,7 +30,8 @@ Other new features:
 Internal improvements:
 
   o Distribute msvc9 project files that had been in CVS only. (cbagwell)
-
+  o cmake now compiles waveaudio driver under windows environment. (cbagwell)
+    [3072672]
 
 
 sox-14.3.1	2010-04-11
