Add support for 32-bit samples to OSS handler.

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,7 @@ Audio device drivers:
 
   o Fix immediate segfault on OSX while attempting to record.  May also
     prevent segfaults on playing that some people reported.  (Adam Fritzler)
+  o Add support for 32-bit samples to OSS driver. (Eric Lammerts)
 
 Effects:
 
