Add support for building SoX via Microsoft Visual Studio 2010 (msvc10). The VS2010 project files can also be used with the freely-downloadable Microsoft Windows SDK 7.1 to build SoX without needing to buy Visual Studio. Minor tweaks to support for Microsoft Visual Studio 2008 (msvc9) and cmake.

--- a/ChangeLog
+++ b/ChangeLog
@@ -40,6 +40,8 @@ Other new features:
 Internal improvements:
 
   o Distribute msvc9 project files that had been in CVS only. (cbagwell)
+  o Add msvc10 project files (also compatible with the Windows SDK 7.1).
+    (Doug Cook)
   o cmake now compiles waveaudio driver under windows environment. (cbagwell)
     [3072672]
 
