--- a/INSTALL
+++ b/INSTALL
@@ -208,11 +208,12 @@ on a new platform then you can use the scripts "tests.sh" and
 Compiling using Microsoft's Visual C
 ------------------------------------
 
-To compile a full-featured build of SoX with Visual C 9.0, you may be able to
-use the preconfigured solution found in the sox\msvc9 folder. See
-sox\msvc9\readme.txt for details. If the preconfigured solution doesn't work
-for you or if you are not using Visual C 9.0, follow the CMake instructions
-given below.
+To compile a full-featured build of SoX with Visual Studio 2008 (msvc9),
+Visual Studio 2010 (msvc10), or the Windows SDK 7.1, you may be able to use the
+preconfigured solution found in the sox\msvc9 (VS2008) or sox\msvc10 (VS2010 or
+Windows SDK 7.1) folder. See sox\msvc9\readme.txt or sox\msvc10\readme.txt for
+details on building using the corresponding Microsoft C compiler. If the
+preconfigured solution doesn't work for you, build with CMake as follows:
 
 o Install cmake (http://www.cmake.org/HTML/Download.html)
 o Install any optional libraries to use with SoX
@@ -227,7 +228,7 @@ This should generate project build files for use with Visual C.
 Appendix: How To Compile SoX with MP3 Support on Win32
 ------------------------------------------------------
 
-The solution file in the msvc9 will build SoX to dynamically load
+The solution files in msvc9 and msvc10 will build SoX to dynamically load
 libmad.dll and libmp3lame.dll at runtime.
 
 The following text, untested by the SoX team, was originally written
